[gd_scene load_steps=6 format=4 uid="uid://e51l3kt8pea"]

[ext_resource type="Script" path="res://Scenes/Actual Scenes/defaultRoom/roomBase.gd" id="1_v7q5v"]
[ext_resource type="PackedScene" uid="uid://btx2qw3isgxaw" path="res://Tilesets/IndoorTileMap.tscn" id="2_6o2xb"]
[ext_resource type="PackedScene" uid="uid://b2vkai83legmh" path="res://Nodes/Radio/Radio.tscn" id="3_4cixp"]
[ext_resource type="PackedScene" uid="uid://c8f42wsc3qnoi" path="res://Nodes/UI/TextEvent.tscn" id="4_n3sli"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_syjba"]
size = Vector2(576, 320)

[node name="TestRoom2" type="Node2D"]
script = ExtResource("1_v7q5v")
cameraPos = Vector2(288, 160)

[node name="RoomDetector" type="Area2D" parent="."]
process_mode = 3
visible = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetector"]
position = Vector2(288, 160)
shape = SubResource("RectangleShape2D_syjba")

[node name="TileMap" parent="." instance=ExtResource("2_6o2xb")]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAkAAQABAAEAAAAAAAgAAQABAAEAAAABAAgAAQABAAEAAAABAAkAAQABAAEAAAACAAkAAQABAAEAAAADAAkAAQABAAEAAAAEAAkAAQABAAEAAAAFAAkAAQACAAEAAAAHAAkAAQAAAAEAAAAIAAkAAQABAAEAAAAPAAkAAQABAAEAAAAQAAkAAQABAAEAAAAQAAgAAQABAAEAAAAPAAgAAQABAAEAAAAIAAgAAQABAAEAAAAHAAgAAQAAAAEAAAAFAAgAAQACAAEAAAAEAAgAAQABAAEAAAADAAgAAQABAAEAAAACAAgAAQABAAEAAAAAAAYAAQABAAEAAAAAAAUAAQABAAEAAAAAAAQAAQABAAAAAAAAAAIAAQABAAIAAAAAAAEAAQABAAEAAAAAAAAAAQABAAEAAAAGAAUAAQABAAIAAAAGAAQAAQABAAAAAAAHAAQAAQABAAAAAAAHAAUAAQABAAIAAAAHAAcAAQAAAAAAAAACAAQAAQABAAAAAAADAAQAAQABAAAAAAAEAAQAAQABAAAAAAAEAAYAAQABAAEAAAAFAAYAAQACAAEAAAAFAAcAAQACAAEAAAAEAAcAAQABAAEAAAABAAYAAQABAAEAAAACAAYAAQABAAEAAAABAAIAAQABAAIAAAABAAEAAQABAAEAAAABAAAAAQABAAEAAAACAAAAAQAEAAMAAAADAAAAAQABAAIAAAAEAAAAAQABAAIAAAAIAAQAAQABAAAAAAAIAAUAAQABAAIAAAAIAAcAAQABAAAAAAAFAAAAAQABAAIAAAAGAAAAAQAEAAIAAAAHAAAAAQABAAEAAAAIAAAAAQABAAEAAAAJAAAAAQABAAEAAAAKAAAAAQABAAEAAAALAAAAAQABAAEAAAAMAAAAAQABAAEAAAANAAAAAQABAAEAAAAOAAAAAQABAAEAAAAPAAAAAQABAAEAAAAQAAcAAQABAAEAAAAQAAYAAQABAAEAAAAQAAUAAQABAAEAAAAQAAQAAQABAAEAAAAPAAMAAQABAAEAAAAPAAIAAQABAAEAAAAQAAIAAQABAAEAAAAQAAEAAQABAAEAAAAQAAMAAQABAAEAAAAPAAEAAQABAAEAAAAPAAQAAQABAAEAAAAPAAUAAQABAAEAAAAPAAYAAQABAAEAAAAPAAcAAQABAAEAAAACAAIAAQACAAIAAAACAAEAAQACAAEAAAAGAAEAAQAAAAEAAAAHAAEAAQABAAEAAAAIAAEAAQABAAEAAAAFAAQAAQABAAAAAAAFAAUAAQAEAAMAAAAEAAUAAQABAAEAAAAOAAkAAQABAAEAAAAOAAgAAQABAAEAAAAOAAcAAQABAAEAAAAOAAYAAQABAAEAAAAOAAUAAQABAAEAAAAOAAQAAQABAAEAAAAOAAMAAQABAAEAAAAOAAIAAQABAAEAAAAOAAEAAQABAAEAAAANAAkAAQABAAEAAAANAAgAAQABAAEAAAANAAcAAQABAAEAAAANAAYAAQABAAEAAAANAAUAAQABAAEAAAANAAQAAQABAAEAAAANAAMAAQABAAEAAAANAAIAAQABAAEAAAANAAEAAQABAAEAAAAMAAkAAQABAAEAAAAMAAgAAQABAAEAAAAMAAcAAQABAAEAAAAMAAYAAQABAAEAAAAMAAUAAQABAAEAAAAMAAQAAQABAAEAAAAMAAMAAQABAAEAAAAMAAIAAQABAAEAAAAMAAEAAQABAAEAAAAJAAEAAQABAAEAAAAKAAEAAQABAAEAAAALAAEAAQABAAEAAAARAAkAAQABAAEAAAARAAgAAQABAAEAAAARAAcAAQABAAEAAAARAAYAAQABAAEAAAARAAUAAQABAAEAAAARAAQAAQABAAEAAAARAAMAAQABAAEAAAARAAIAAQABAAEAAAARAAEAAQABAAEAAAARAAAAAQABAAEAAAAQAAAAAQABAAEAAAAJAAIAAQABAAIAAAALAAQAAQAAAAEAAAALAAUAAQAAAAEAAAALAAkAAQABAAEAAAAKAAkAAQABAAEAAAAJAAkAAQABAAEAAAAJAAgAAQABAAEAAAAKAAgAAQABAAEAAAALAAgAAQABAAEAAAAKAAcAAQABAAAAAAAJAAcAAQABAAAAAAALAAcAAQAEAAEAAAALAAYAAQAAAAEAAAAJAAUAAQACAAIAAAAJAAQAAQACAAAAAAALAAMAAQAAAAEAAAALAAIAAQAEAAIAAAAKAAIAAQABAAIAAAABAAUAAQABAAEAAAACAAUAAQABAAEAAAADAAUAAQABAAEAAAADAAYAAQABAAEAAAADAAcAAQABAAEAAAACAAcAAQABAAEAAAABAAcAAQABAAEAAAAAAAcAAQABAAEAAAABAAQAAQABAAAAAAAIAAIAAQABAAIAAAAHAAIAAQABAAIAAAAGAAIAAQAAAAIAAAA=")

[node name="Radio" parent="." instance=ExtResource("3_4cixp")]
position = Vector2(146, 112)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FirstCall" parent="CanvasLayer" instance=ExtResource("4_n3sli")]
visible = false

[connection signal="body_entered" from="RoomDetector" to="." method="_on_room_detector_body_entered"]
[connection signal="body_exited" from="RoomDetector" to="." method="_on_room_detector_body_exited"]
[connection signal="interacted" from="Radio" to="." method="_on_radio_interacted"]
[connection signal="interacted" from="Radio" to="CanvasLayer/FirstCall" method="beginEvent"]
[connection signal="finished" from="CanvasLayer/FirstCall" to="." method="_on_text_event_finished"]
